--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ anyhow = "1.0"
 directories = "5.0"
 unicode-width = "0.2"
 uuid = { version = "1.0", features = ["v4"] }
-arboard = "3.4"
+arboard = { version = "3.4", features = ["wayland-data-control"] }
 
 # Syntax highlighting
 syntect = "5.2"
