Add .tuicrignore and base/diff-only startup options

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ unicode-width = "0.2"
 uuid = { version = "1.0", features = ["v4"] }
 arboard = { version = "3.4", features = ["wayland-data-control"] }
 base64 = "0.22"
+ignore = "0.4"
 
 # Syntax highlighting
 syntect = "5.2"
