--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -155,6 +155,8 @@ jobs:
             os: ubuntu-24.04-arm
           - target: aarch64-apple-darwin
             os: macos-latest
+          - target: x86_64-apple-darwin
+            os: macos-latest
           - target: x86_64-pc-windows-msvc
             os: windows-latest
 
